<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.Registration">

    <TextView
        android:id="@+id/signingApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signing_app"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoSigning" />

    <ImageView
        android:id="@+id/imgLogoSigning"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/emailFieldLayoutSigning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_yor_email"
        app:layout_constraintTop_toBottomOf="@+id/signingApp"
        app:layout_constraintStart_toStartOf="@+id/signingApp"
        app:layout_constraintEnd_toEndOf="@+id/signingApp"
        app:startIconDrawable="@drawable/ic_email"
        app:endIconMode="clear_text"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailFieldRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/passwordFieldLayoutSigning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/emailFieldLayoutSigning"
        app:layout_constraintStart_toStartOf="@+id/emailFieldLayoutSigning"
        app:layout_constraintEnd_toEndOf="@+id/emailFieldLayoutSigning"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordFieldSigning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/password2FieldLayoutSigning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verify_the_password"
        app:layout_constraintTop_toBottomOf="@+id/passwordFieldLayoutSigning"
        app:layout_constraintStart_toStartOf="@+id/passwordFieldLayoutSigning"
        app:layout_constraintEnd_toEndOf="@+id/passwordFieldLayoutSigning"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password2FieldSigning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/password2FieldLayoutSigning"
        app:layout_constraintStart_toStartOf="@+id/password2FieldLayoutSigning"
        app:layout_constraintTop_toBottomOf="@+id/password2FieldLayoutSigning" />

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/already_have_an_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btnRegistration"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistration" />


</androidx.constraintlayout.widget.ConstraintLayout>