<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.AddingNewPost">

    <TextView
        android:id="@+id/tvAddPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/adding_new_post"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBackNewPost"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tittleAddLayoutPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_post"
        app:layout_constraintTop_toBottomOf="@+id/tvAddPost"
        app:layout_constraintStart_toStartOf="@+id/tvAddPost"
        app:layout_constraintEnd_toEndOf="@+id/tvAddPost"
        app:endIconMode="clear_text"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tittleAddPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bodyAddLayoutPost"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/body_post"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/btnPublish"
        app:layout_constraintEnd_toEndOf="@+id/tittleAddLayoutPost"
        app:layout_constraintStart_toStartOf="@+id/tittleAddLayoutPost"
        app:layout_constraintTop_toBottomOf="@+id/tittleAddLayoutPost"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bodyAddPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/publish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bodyAddLayoutPost"
        app:layout_constraintStart_toStartOf="@+id/bodyAddLayoutPost" />

    <ImageView
        android:id="@+id/ivBackNewPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>